--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "slides": "slidev slides.md --port 4040",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "vitest run",
@@ -23,6 +24,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.47.2",
+    "@slidev/cli": "^0.52.6",
+    "@slidev/theme-default": "^0.25.0",
     "@types/node": "^20.11.30",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
